2004-10-01  Nick Clifton  <nickc@redhat.com>

	* config/stormy16/stormy16.c (TARGET_BUILD_BUILTIN_VA_LIST_TYPE):
	Fix typo in macro name, it should be: TARGET_BUILD_BUILTIN_VA_LIST.

2004-09-30  Richard Henderson  <rth@redhat.com>

	* config/alpha/qrnnd.asm: Mark for noexecstack.

2004-09-30  Richard Henderson  <rth@redhat.com>
 
        * unwind-dw2.c (_Unwind_GetGR): Honor DWARF_ZERO_REG.
        * doc/tm.texi (DWARF_ZERO_REG): New.
 
        * config/alpha/alpha.c (alpha_sa_mask, alpha_expand_prologue,
        alpha_expand_epilogue): Revert 2003-09-30 change to store zero.
        * config/alpha/alpha.h (DWARF_ZERO_REG): New.

2004-09-29  David Edelsohn  <edelsohn@gnu.org>

	PR target/17493
	Backport from mainline
	2004-07-16  Segher Boessenkool  <segher@kernel.crashing.org>
	* config/rs6000/eabi.asm (__eabi_convert): Fix typo (cmpi vs. cmpwi).

2004-09-28  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	PR target/14064
	Backport from mainline
	2004-09-01  James E Wilson  <wilson@specifixinc.com>
	* config/avr/avr.c (avr_unique_section): Delete prototype and
	definition.
	(TARGET_ASM_UNIQUE_SECTION): Delete.

2004-09-26  Roger Sayle  <roger@eyesopen.com>

	PR other/15526
	Backport from mainline
	2004-05-20  Falk Hueffner  <falk@debian.org>
	* libgcc2.c (__mulvsi3): Fix overflow test.

2004-09-24  Roger Sayle  <roger@eyesopen.com>

	PR rtl-optimization/9771
	* regclass.c (CALL_REALLY_USED_REGNO_P): New macro to eliminate
	conditional compilation in init_reg_sets_1.
	(init_reg_sets_1): Let global_regs[i] take priority over the frame
	(but not stack) pointer exceptions to regs_invalidated_by_call.
	(globalize_reg): Globalizing a fixed register may need to update
	regs_invalidated_by_call.

2004-09-23  Denis Chertykov  <denisc@overta.ru>

	PR target/16884
	* config/avr/avr.md ("movmemhi"): Substitute match_dup to
	match_scratch.
	(*movmemqi_insn): Likewise.
	(*movmemhi): Likewise.
	(clrmemhi): Likewise.
	(*clrmemqi): Likewise.
	(*clrmemhi): Likewise.
